--- a/进度表.MD
+++ b/进度表.MD
@@ -8,7 +8,7 @@
 
 4.Prototype 1
 
-5.Builder
+5.Builder   1
 
 #####结构型模式
 1.Adapter   1
@@ -24,3 +24,6 @@
 6.Flyweight 1
 
 7.Composite 
+
+#####行为性模式
+1.Strategy  1
