--- a/进度表.MD
+++ b/进度表.MD
@@ -27,3 +27,23 @@
 
 #####行为性模式
 1.Strategy  1
+
+2.Template  1
+
+3.Observer
+
+4.Interator
+
+5.ChainOfResponsibility
+
+6.Command
+
+7.Memento
+
+8.Stage
+
+9.Visitor
+
+10.Mediator
+
+11.Interpreter
